syntax = "proto3";
//package mock.v1;
option java_multiple_files = true;
option java_package = "com.example.mock.proto";
option java_outer_classname = "MockProto";

service MockService {
  rpc Get (MockRequest) returns (MockResponse);
}

message MockRequest {
  string id = 1;
}

message MockResponse {
  string payload = 1;
}